// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Flyout Menu Controlled example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div>
        <button
          aria-label="Helpful description"
          className="undefined iot-flyout-menu__trigger-button iot-flyout-menu--light iot--btn bx--btn bx--btn--ghost"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label flyout-trigger"
            id="test-trigger-id"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 8h-4.1c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2v2h14.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30V8zM21 12c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3S22.7 12 21 12zM2 24h4.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30v-2H15.9c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2V24zM11 20c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3S9.3 20 11 20z"
            />
          </svg>
        </button>
      </div>
      <div>
        <button
          aria-label="Helpful description"
          className="undefined iot-flyout-menu__trigger-button iot-flyout-menu--light iot--btn bx--btn bx--btn--field bx--btn--ghost"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label flyout-trigger"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28 28H17a2.0023 2.0023 0 01-2-2V20a2.0023 2.0023 0 012-2H28a2.0027 2.0027 0 012 2v6A2.0027 2.0027 0 0128 28zM17 20v6H28.002L28 20zM12 10L12 13.586 7.707 9.293 6.293 10.707 10.586 15 7 15 7 17 14 17 14 10 12 10z"
            />
            <path
              d="M13,22H4a2.0023,2.0023,0,0,1-2-2V7A2.002,2.002,0,0,1,4,5H26a2.0023,2.0023,0,0,1,2,2v9H26V7H4V20h9Z"
            />
          </svg>
        </button>
      </div>
      <div>
        <button
          aria-label="Helpful description"
          className="undefined iot-flyout-menu__trigger-button iot-flyout-menu--light iot--btn bx--btn bx--btn--sm bx--btn--ghost"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label flyout-trigger"
            id="test-trigger-id-3"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27 25H21a3 3 0 00-3 3v2h2V28a1 1 0 011-1h6a1 1 0 011 1v2h2V28A3 3 0 0027 25zM20 20a4 4 0 104-4A4 4 0 0020 20zm6 0a2 2 0 11-2-2A2 2 0 0126 20zM6 21V20H4v1a7 7 0 007 7h3V26H11A5 5 0 016 21zM19 10H26V12H19zM19 6H29V8H19zM19 2H29V4H19zM11 11H5a3 3 0 00-3 3v2H4V14a1 1 0 011-1h6a1 1 0 011 1v2h2V14A3 3 0 0011 11zM8 10A4 4 0 104 6 4 4 0 008 10zM8 4A2 2 0 116 6 2 2 0 018 4z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Flyout Menu basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "alignContent": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <button
        className="iot--btn bx--btn bx--btn--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "margin": "10px 5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        Hide
      </button>
      <button
        className="story-flyout-menu-open iot--btn bx--btn bx--btn--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "margin": "10px 5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        Show
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div>
        <div
          aria-describedby={null}
          aria-expanded={false}
          aria-label="Helpful description"
          className="bx--tooltip__label flyout-trigger"
          id="test-trigger-id"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="button"
          tabIndex={0}
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
